--- a/example/example.vcxproj.filters
+++ b/example/example.vcxproj.filters
@@ -46,7 +46,10 @@
 		<ClCompile Include="..\..\..\addons\ofxPolygonTriangulation\src\DoublyConnectedEdgeList.cpp">
 			<Filter>addons\ofxPolygonTriangulation\src</Filter>
 		</ClCompile>
-		<ClCompile Include="..\..\..\addons\ofxPolygonTriangulation\src\ofxPolygonTriangulation.cpp">
+		<ClCompile Include="..\..\..\addons\ofxPolygonTriangulation\src\PolygonTriangulation.cpp">
+			<Filter>addons\ofxPolygonTriangulation\src</Filter>
+		</ClCompile>
+		<ClCompile Include="..\..\..\addons\ofxPolygonTriangulation\src\PolygonUtility.cpp">
 			<Filter>addons\ofxPolygonTriangulation\src</Filter>
 		</ClCompile>
 		<ClCompile Include="..\..\..\addons\ofxPolygonTriangulation\src\SplitToMonotone.cpp">
@@ -61,19 +64,19 @@
 			<UniqueIdentifier>{d8376475-7454-4a24-b08a-aac121d3ad6f}</UniqueIdentifier>
 		</Filter>
 		<Filter Include="addons">
-			<UniqueIdentifier>{6E3E1F5B--0D2-3-4A-8F-B-2BD-5B2E3AB5BF88}</UniqueIdentifier>
+			<UniqueIdentifier>{727BB5E1--7EE-6-4B-8B-B-B7F-C03B6E850DC5}</UniqueIdentifier>
 		</Filter>
 		<Filter Include="addons\ofxGui">
-			<UniqueIdentifier>{2775924D--F77-2-4B-74-B-567-AB385127AB4E}</UniqueIdentifier>
+			<UniqueIdentifier>{E49DA9E4--7E6-B-4D-FE-8-A41-4A953510D217}</UniqueIdentifier>
 		</Filter>
 		<Filter Include="addons\ofxGui\src">
-			<UniqueIdentifier>{801630A8--4A0-E-45-52-8-4D2-47A8868FE3BF}</UniqueIdentifier>
+			<UniqueIdentifier>{27A8D8C5--22D-4-4B-BF-9-431-CA6A72864FE1}</UniqueIdentifier>
 		</Filter>
 		<Filter Include="addons\ofxPolygonTriangulation">
-			<UniqueIdentifier>{7CC6CE1B--505-F-48-01-B-38E-39558C5C75D2}</UniqueIdentifier>
+			<UniqueIdentifier>{AA69795C--86F-0-4A-28-8-BEB-011F852270C4}</UniqueIdentifier>
 		</Filter>
 		<Filter Include="addons\ofxPolygonTriangulation\src">
-			<UniqueIdentifier>{341937B2--1CB-6-47-E6-9-279-5A9E4F2FB521}</UniqueIdentifier>
+			<UniqueIdentifier>{65666ABD--B91-A-4F-C6-A-6EF-66E24BC519D8}</UniqueIdentifier>
 		</Filter>
 	</ItemGroup>
 	<ItemGroup>
@@ -125,7 +128,10 @@
 		<ClInclude Include="..\..\..\addons\ofxPolygonTriangulation\src\HalfEdgeSweepComparer.h">
 			<Filter>addons\ofxPolygonTriangulation\src</Filter>
 		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxPolygonTriangulation\src\ofxPolygonTriangulation.h">
+		<ClInclude Include="..\..\..\addons\ofxPolygonTriangulation\src\PolygonTriangulation.h">
+			<Filter>addons\ofxPolygonTriangulation\src</Filter>
+		</ClInclude>
+		<ClInclude Include="..\..\..\addons\ofxPolygonTriangulation\src\PolygonUtility.h">
 			<Filter>addons\ofxPolygonTriangulation\src</Filter>
 		</ClInclude>
 		<ClInclude Include="..\..\..\addons\ofxPolygonTriangulation\src\SplitToMonotone.h">
