--- a/tests/tests.vcxproj.filters
+++ b/tests/tests.vcxproj.filters
@@ -1,72 +1,75 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-	<ItemGroup>
-		<ClCompile Include="src\ofApp.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\main.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\main.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="src\ofApp.cpp">
-			<Filter>src</Filter>
-		</ClCompile>
-		<ClCompile Include="..\..\..\addons\ofxPolygonTriangulation\src\DoublyConnectedEdgeList.cpp">
-			<Filter>addons\ofxPolygonTriangulation\src</Filter>
-		</ClCompile>
-		<ClCompile Include="..\..\..\addons\ofxPolygonTriangulation\src\ofxPolygonTriangulation.cpp">
-			<Filter>addons\ofxPolygonTriangulation\src</Filter>
-		</ClCompile>
-		<ClCompile Include="..\..\..\addons\ofxPolygonTriangulation\src\SplitToMonotone.cpp">
-			<Filter>addons\ofxPolygonTriangulation\src</Filter>
-		</ClCompile>
-		<ClCompile Include="..\..\..\addons\ofxPolygonTriangulation\src\TriangulateMonotone.cpp">
-			<Filter>addons\ofxPolygonTriangulation\src</Filter>
-		</ClCompile>
-	</ItemGroup>
-	<ItemGroup>
-		<Filter Include="src">
-			<UniqueIdentifier>{d8376475-7454-4a24-b08a-aac121d3ad6f}</UniqueIdentifier>
-		</Filter>
-		<Filter Include="addons">
-			<UniqueIdentifier>{08A3F51F--AE2-B-4C-6F-8-1EF-8BFF35B62650}</UniqueIdentifier>
-		</Filter>
-		<Filter Include="addons\ofxPolygonTriangulation">
-			<UniqueIdentifier>{DF7AB071--B70-F-45-A4-A-51B-C4B68243C0E2}</UniqueIdentifier>
-		</Filter>
-		<Filter Include="addons\ofxPolygonTriangulation\src">
-			<UniqueIdentifier>{4C89B93D--85A-B-47-00-B-99B-69BD49011851}</UniqueIdentifier>
-		</Filter>
-	</ItemGroup>
-	<ItemGroup>
-		<ClInclude Include="src\ofApp.h">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="src\ofApp.h">
-			<Filter>src</Filter>
-		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxPolygonTriangulation\src\DoublyConnectedEdgeList.h">
-			<Filter>addons\ofxPolygonTriangulation\src</Filter>
-		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxPolygonTriangulation\src\HalfEdgeSweepComparer.h">
-			<Filter>addons\ofxPolygonTriangulation\src</Filter>
-		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxPolygonTriangulation\src\ofxPolygonTriangulation.h">
-			<Filter>addons\ofxPolygonTriangulation\src</Filter>
-		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxPolygonTriangulation\src\SplitToMonotone.h">
-			<Filter>addons\ofxPolygonTriangulation\src</Filter>
-		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxPolygonTriangulation\src\TriangulateMonotone.h">
-			<Filter>addons\ofxPolygonTriangulation\src</Filter>
-		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxPolygonTriangulation\src\VertexSweepComparer.h">
-			<Filter>addons\ofxPolygonTriangulation\src</Filter>
-		</ClInclude>
-	</ItemGroup>
-	<ItemGroup>
-		<ResourceCompile Include="icon.rc" />
-	</ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\main.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\main.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\addons\ofxPolygonTriangulation\src\DoublyConnectedEdgeList.cpp">
+      <Filter>addons\ofxPolygonTriangulation\src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\addons\ofxPolygonTriangulation\src\PolygonTriangulation.cpp">
+      <Filter>addons\ofxPolygonTriangulation\src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\addons\ofxPolygonTriangulation\src\PolygonUtility.cpp">
+      <Filter>addons\ofxPolygonTriangulation\src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\addons\ofxPolygonTriangulation\src\SplitToMonotone.cpp">
+      <Filter>addons\ofxPolygonTriangulation\src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\addons\ofxPolygonTriangulation\src\TriangulateMonotone.cpp">
+      <Filter>addons\ofxPolygonTriangulation\src</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="src">
+      <UniqueIdentifier>{d8376475-7454-4a24-b08a-aac121d3ad6f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="addons">
+      <UniqueIdentifier>{2AD9761A--E08-0-49-E1-A-A42-AB0F81F96439}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="addons\ofxPolygonTriangulation">
+      <UniqueIdentifier>{FB3CC7AE--BE9-8-45-D3-B-725-63CD028943B3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="addons\ofxPolygonTriangulation\src">
+      <UniqueIdentifier>{F5B83E2E--5EE-F-4C-96-B-46C-5A595C514A61}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="addons\ofxUnitTests">
+      <UniqueIdentifier>{9385F8E0--6CA-D-44-90-A-0D7-65DD271C5674}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="addons\ofxUnitTests\src">
+      <UniqueIdentifier>{BC02EE6E--0C5-9-4A-6A-B-21F-67F38CDD61DA}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\addons\ofxPolygonTriangulation\src\DoublyConnectedEdgeList.h">
+      <Filter>addons\ofxPolygonTriangulation\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxPolygonTriangulation\src\HalfEdgeSweepComparer.h">
+      <Filter>addons\ofxPolygonTriangulation\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxPolygonTriangulation\src\PolygonTriangulation.h">
+      <Filter>addons\ofxPolygonTriangulation\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxPolygonTriangulation\src\PolygonUtility.h">
+      <Filter>addons\ofxPolygonTriangulation\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxPolygonTriangulation\src\SplitToMonotone.h">
+      <Filter>addons\ofxPolygonTriangulation\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxPolygonTriangulation\src\TriangulateMonotone.h">
+      <Filter>addons\ofxPolygonTriangulation\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxPolygonTriangulation\src\VertexSweepComparer.h">
+      <Filter>addons\ofxPolygonTriangulation\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUnitTests\src\ofxUnitTests.h">
+      <Filter>addons\ofxUnitTests\src</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="icon.rc" />
+  </ItemGroup>
 </Project>
